--- a/client/css/style.css
+++ b/client/css/style.css
@@ -14,6 +14,8 @@ body {
     font-family: "Lato", sans-serif;
     margin: 0;
     transition: transform 0.3s ease;
+    background-color: #232655;
+    color: white;
 }
 
 body.show-nav {
@@ -21,8 +23,29 @@ body.show-nav {
     transform: translate(200px);
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgb(150, 144, 144);
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: grey;
+}
+
 nav {
-    background-color: var(--primary-color);
+    background-color: #232655;
     border-right: 2px solid rgba(200, 200, 200, 0.1);
     color: white;
     position: fixed;
@@ -70,12 +93,13 @@ nav ul li a:hover {
 }
 
 header {
-    background-color: var(--primary-color);
+    background-color: #232655;
     color: white;
     font-size: 130%;
     position: relative;
-    padding: 40px 15px;
+    padding: 20px 15px;
     text-align: center;
+    border-bottom: 2px solid rgba(200, 200, 200, 0.1);
 }
 
 header h1 {
